Fix piano key overflow

--- a/public/stylesheets/piano.css
+++ b/public/stylesheets/piano.css
@@ -7,7 +7,7 @@
 }
 
 #piano .keys {
-	width: 1430px;
+	width: 1460px;
 	height: 100%;
 	margin: auto;
 	position: relative;
